add enrichment ctrl

--- a/public/enrichment/mart-visual-enrichment/app/partials/enrichment.html
+++ b/public/enrichment/mart-visual-enrichment/app/partials/enrichment.html
@@ -1,8 +1,11 @@
-<div class="container" ng-controller="EnrichmentCtrl">
+<div class="container" ng-controller="EnrichmentCtrl as enr">
     <div class="row">
         <div class="mve-species">
             <h2>Input Species Available</h2>
-            <select class="form-control mve-select" ng-model="selectedSpecies" ng-options="s.displayName for s in species" ng-change="onSelect()"/>
+            <select class="form-control mve-select"
+                    ng-model="selectedSpecies"
+                    ng-options="s.displayName for s in species"
+                    ng-change="enr.select(selectedSpecies)"/>
         </div>
     </div>
 
