--- a/public/enrichment/mart-visual-enrichment/app/partials/enrichment.html
+++ b/public/enrichment/mart-visual-enrichment/app/partials/enrichment.html
@@ -5,7 +5,7 @@
             <select class="form-control mve-select"
                     ng-model="selectedSpecies"
                     ng-options="s.displayName for s in species"
-                    ng-change="enr.select(selectedSpecies)"/>
+                    ng-change="enr.updateSpecies(selectedSpecies)"/>
         </div>
     </div>
 
