location change event is not fired the first time

--- a/public/enrichment/mart-visual-enrichment/app/partials/enrichment.html
+++ b/public/enrichment/mart-visual-enrichment/app/partials/enrichment.html
@@ -1,6 +1,6 @@
 <div class="container">
-    <div class="row" ng-controller="SpeciesCtrl">
-        <mv-species species="species"/>
+    <div class="row">
+        <mv-species class="col-md-8" species="{{species}}"></mv-species>
     </div>
 
     <div class="row" ng-controller="EnrichmentCtrl as enr">
