--- a/public/enrichment/mart-visual-enrichment/app/partials/enrichment.html
+++ b/public/enrichment/mart-visual-enrichment/app/partials/enrichment.html
@@ -1,6 +1,11 @@
+
 <div class="container">
     <div class="row">
         <mv-species class="col-md-8" species="{{species}}"></mv-species>
+        <div class="query-buttons col-md-4" ng-cotroller="QueryCtrl as ctrl">
+            <button class="btn btn-default" ng-click="ctrl.submit()">Submit</button>
+            <button class="btn btn-default" ng-click="ctrl.getQuery()">Get XML Query</button>
+        </div>
     </div>
 
     <div class="row" ng-controller="EnrichmentCtrl as enr">
@@ -9,9 +14,9 @@
             <h2>Select one of these inputs</h2>
             <tabset type="pills" justified="true">
                 <tab heading="List of Genes">
-                    <div mv-filter="enr.getFilter('sets')"
-                         ng-model="setsFilterValue"
-                         ng-change="enr.set('sets', setsFilterValue)">
+                    <div ng-model="setsFilterValue"
+                         ng-change="set.set('sets', setsFilterValue)">
+                         <mv-filter element="enr.getFilter('sets')"></filter>
                      </div>
                 </tab>
                 <tab heading="BED File">
@@ -21,11 +26,11 @@
                          ng-change="enr.set('bed_regions', bedFilterValue)">
                      </div>
                      <div class="col-md-4">
-                        <div mv-filter="enr-getFilter('downstream')"
-                             ng-model="downstreamFilterValue"
+                        <div ng-model="downstreamFilterValue"
                              ng-change="enr.set('downstream', downstreamFilterValue)">
+                             <mv-filter element="enr.getFilter('downstream')"></mv-filter>
                          </div>
-                         <div mv-filter="enr-getFilter('upstream')"
+                         <div mv-filter="enr.getFilter('upstream')"
                               ng-model="upstreamFilterValue"
                               ng-change="enr.set('upstream', upstreamFilterValue)">
                          </div>
