temporary filter behaviour

--- a/public/enrichment/mart-visual-enrichment/app/partials/boolean-filter.html
+++ b/public/enrichment/mart-visual-enrichment/app/partials/boolean-filter.html
@@ -1,6 +1,6 @@
 <div>
     <h3>{{filter.displayName}}</h3>
     <p>{{filter.description}}</p>
-    <input type="radio" ng-model="choice" value="true"> Yes
-    <input type="radio" ng-model="choice" value="false"> No
+    <input type="radio" ng-model="choice" ng-change="set('only')"> Yes
+    <input type="radio" ng-model="choice" ng-change="set('excluded')"> No
 </div>
