--- a/public/enrichment/mart-visual-enrichment/app/partials/enrichment.html
+++ b/public/enrichment/mart-visual-enrichment/app/partials/enrichment.html
@@ -14,25 +14,21 @@
             <h2>Select one of these inputs</h2>
             <tabset type="pills" justified="true">
                 <tab heading="List of Genes">
-                    <div ng-model="setsFilterValue"
-                         ng-change="set.set('sets', setsFilterValue)">
-                         <mv-filter element="enr.getFilter('sets')"></filter>
+                    <div mv-filter="enr.getFilter('sets')"
+                         mv-filter-model="ctrl.setsFilterValue">
                      </div>
                 </tab>
                 <tab heading="BED File">
                     <div class="col-md-8"
                          mv-filter="enr.getFilter('bed_regions')"
-                         ng-model="bedFilterValue"
-                         ng-change="enr.set('bed_regions', bedFilterValue)">
+                         ng-filter-model="ctrl.bedFilterValue">
                      </div>
                      <div class="col-md-4">
-                        <div ng-model="downstreamFilterValue"
-                             ng-change="enr.set('downstream', downstreamFilterValue)">
-                             <mv-filter element="enr.getFilter('downstream')"></mv-filter>
+                        <div mv-filter="enr.getFilter('downstream')"
+                             mv-filter-model="downstreamFilterValue">
                          </div>
                          <div mv-filter="enr.getFilter('upstream')"
-                              ng-model="upstreamFilterValue"
-                              ng-change="enr.set('upstream', upstreamFilterValue)">
+                              mv-filter-model="ctrl.upstreamFilterValue">
                          </div>
                      </div>
                 </tab>
@@ -44,8 +40,7 @@
             <tabset type="pills" justified="true">
                 <tab heading="Background">
                     <div mv-filter="enr.getFilter('background')"
-                         ng-model="backgroundFilterValue"
-                         ng-change="enr.set('background', backgroundFilterValue)">
+                         mv-filter-model="enr.set('background', value)">
                      </div>
                 </tab>
             </tabset>
@@ -56,12 +51,10 @@
             <tabset type="pills" justified="true">
                 <tab heading="Cutoff">
                     <div mv-filter="enr.getFilter('cutoff')"
-                         ng-model="cutoffFilterValue"
-                         ng-change="enr.set('cutoff', cutoffFilterValue)">
+                         ng-filter-model="ctrl.cutoffFilterValue">
                      </div>
                      <div mv-filter="enr.getFilter('gene_type')"
-                         ng-model="geneTypeFilterValue"
-                         ng-change="enr.set('gene_type', geneTypeFilterValue)">
+                         ng-filter-model="geneTypeFilterValue">
                      </div>
                      <div mv-filter="enr.getFilter('gene_limit')"
                          ng-model="geneLimitFilterValue"
