--- a/public/enrichment/mart-visual-enrichment/app/partials/single-select-upload-filter.html
+++ b/public/enrichment/mart-visual-enrichment/app/partials/single-select-upload-filter.html
@@ -3,8 +3,10 @@
         <h3>{{filter.displayName}}</h3>
         <p>{{filter.description}}</p>
     </div>
-    <select class="form-control mv-select" ng-model="selected" ng-options="f.displayName for f in options"></select>
-    <textarea class="form-control mv-tarea" rows="8" cols="60" ng-model="textareaValue"></textarea>
+    <select class="form-control mv-select" ng-model="selected" ng-options="f.displayName for f in options" ng-change="onSelect(selected)"></select>
+    <textarea class="form-control mv-tarea"
+              rows="8" cols="60" ng-model="textareaValue"
+              ng-change="setFilter(textareaValue)"></textarea>
     <input type="file" accept="text/*">
     <label for="fileupload">Upload local file</label>
 </div>
