--- a/public/enrichment/mart-visual-enrichment/app/partials/text-filter.html
+++ b/public/enrichment/mart-visual-enrichment/app/partials/text-filter.html
@@ -1,5 +1,5 @@
 <div>
     <h3>{{filter.displayName}}</h3>
     <p>{{filter.description}}</p>
-    <input type="text" ng-model="filterText">
+    <input type="text" ng-model="filterText" ng-change="set(filterText)">
 </div>
