--- a/public/enrichment/mart-visual-enrichment/app/partials/upload-filter.html
+++ b/public/enrichment/mart-visual-enrichment/app/partials/upload-filter.html
@@ -3,7 +3,9 @@
         <h3>{{filter.displayName}}</h3>
         <p>{{filter.description}}</p>
     </div>
-    <textarea class="form-control mv-tarea" rows="8" cols="60" ng-model="textareaValue"></textarea>
+    <textarea class="form-control mv-tarea"
+              rows="8" cols="60" ng-model="textareaValue"
+              ng-change="setFilter(textareaValue)"></textarea>
     <input type="file" accept="text/*">
     <label for="fileupload">Upload local file</label>
 </div>
