--- a/public/enrichment/mart-visual-enrichment/app/partials/enrichment.html
+++ b/public/enrichment/mart-visual-enrichment/app/partials/enrichment.html
@@ -1,77 +1,5 @@
 
 <div class="container">
-    <div class="row">
-        <mv-species class="col-md-8" species="{{species}}"></mv-species>
-        <div class="query-buttons col-md-4" ng-cotroller="QueryCtrl as ctrl">
-            <button class="btn btn-default" ng-click="ctrl.submit()">Submit</button>
-            <button class="btn btn-default" ng-click="ctrl.showQuery()">Get XML Query</button>
-        </div>
-    </div>
-
-    <div class="row" ng-controller="EnrichmentCtrl as enr">
-
-        <!-- sets -->
-        <div class="row">
-            <h2>Select one of these inputs</h2>
-            <tabset type="pills" justified="true">
-                <tab heading="List of Genes">
-                    <div mv-filter="enr.getFilter('sets')">
-                    </div>
-                </tab>
-                <tab heading="BED File">
-                    <div class="col-md-8"
-                         mv-filter="enr.getFilter('bed_regions')">
-                     </div>
-                     <div class="col-md-4">
-                        <div mv-filter="enr.getFilter('downstream')">
-                         </div>
-                         <div mv-filter="enr.getFilter('upstream')">
-                         </div>
-                     </div>
-                </tab>
-            </tabset>
-        </div>
-
-        <!-- background -->
-        <div class="row">
-            <h2>Background is optional</h2>
-            <tabset type="pills" justified="true">
-                <tab heading="Background">
-                    <div mv-filter="enr.getFilter('background')">
-                     </div>
-                </tab>
-            </tabset>
-        </div>
-
-        <!-- cutoff and the rest -->
-        <div class="row">
-            <h2>Output filtering</h2>
-            <tabset type="pills" justified="true">
-                <tab heading="Cutoff">
-                    <div mv-filter="enr.getFilter('cutoff')">
-                     </div>
-                     <div mv-filter="enr.getFilter('gene_type')">
-                     </div>
-                     <div mv-filter="enr.getFilter('gene_limit')">
-                     </div>
-                     <div mv-filter="enr.getFilter('homolog')">
-                     </div>
-                </tab>
-            </tabset>
-        </div>
-
-        <!-- annotations -->
-        <div class="row">
-            <h2>Annotations</h2>
-            <tabset type="pills" justified="true">
-                <tab heading="Annotations">
-                    <div ng-repeat="a in enr.getAttributes('annotations')"
-                         mv-attribute="a">
-                     </div>
-                </tab>
-            </tabset>
-        </div>
-
-    </div>
-
+    <div class="row" ui-view="species"></div>
+    <div class="row" ui-view="sections"></div>
 </div>
