--- a/public/enrichment/mart-visual-enrichment/app/partials/filter.html
+++ b/public/enrichment/mart-visual-enrichment/app/partials/filter.html
@@ -1,6 +1,6 @@
 <div ng-switch on="filter.type">
-    <boolean-filter filter="filter" ng-switch-when="boolean"/>
-    <text-filter filter="filter" ng-switch-when="text" />
-    <upload-filter filter="filter" ng-switch-when="upload" />
-    <single-select-upload-filter filter="filter" ng-switch-when="singleSelectUpload" />
+    <boolean-filter filter="filter" ng-switch-when="boolean"></boolean-filter>
+    <text-filter filter="filter" ng-switch-when="text"></text-filter>
+    <upload-filter filter="filter" ng-switch-when="upload"></upload-filter>
+    <single-select-upload-filter filter="filter" ng-switch-when="singleSelectUpload"></single-select-upload-filter>
 </div>
