--- a/public/enrichment/mart-visual-enrichment/app/css/app.css
+++ b/public/enrichment/mart-visual-enrichment/app/css/app.css
@@ -1,6 +1,3 @@
-html, body {
-    height: 100%;
-}
 
 .left-panel {
     border-right: 1px solid #FEDED9;
@@ -31,4 +28,28 @@ input[type=text] {
 
 .mve-species h2 {
     color: #E94E77;
+}
+
+.enrichment h1, .enrichment h2 {
+    text-align: center;
+    margin: 100px auto 45px auto;
+}
+
+.mve-annotations {
+    border: 1px solid red;
+    padding: 20px;
+}
+
+body {
+    margin: 20px auto 140px auto;
+}
+
+@media (min-width: 1024px) {
+
+.query-buttons {
+    position: fixed;
+    top: 70px;
+    right: 0px;
+}
+
 }
