--- a/public/enrichment/mart-visual-enrichment/app/partials/enrichment.html
+++ b/public/enrichment/mart-visual-enrichment/app/partials/enrichment.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
-        <div class="query-buttons col-md-4" ng-cotroller="QueryCtrl as ctrl">
+        <div class="query-buttons col-md-4" ng-controller="QueryCtrl as ctrl">
             <button class="btn btn-default" ng-click="ctrl.submit()">Submit</button>
             <button class="btn btn-default" ng-click="ctrl.showQuery()">Get XML Query</button>
         </div>
