--- a/public/enrichment/mart-visual-enrichment/app/css/app.css
+++ b/public/enrichment/mart-visual-enrichment/app/css/app.css
@@ -44,6 +44,12 @@ body {
     margin: 20px auto 140px auto;
 }
 
+
+.modal-dialog {
+    width: 80%;
+}
+
+
 @media (min-width: 1024px) {
 
 .query-buttons {
