isolated scope and fix bug with registration

--- a/public/enrichment/mart-visual-enrichment/app/partials/attribute.html
+++ b/public/enrichment/mart-visual-enrichment/app/partials/attribute.html
@@ -1,3 +1,1 @@
-<input type="checkbox" ng-model="ckValue" ng-true-value="tVal"
-            ng-false-value="{{null}}"
-            ng-change="setAttribute(ckValue)"><span>{{attr.displayName}}</span>
+<input type="checkbox" ng-model="ckValue" ng-checked="setAttribute(ckValue)"><span>{{attr.displayName}}</span>
