--- a/public/enrichment/mart-visual-enrichment/app/partials/filter.html
+++ b/public/enrichment/mart-visual-enrichment/app/partials/filter.html
@@ -5,4 +5,5 @@
     <single-select-upload-filter filter="filter" ng-switch-when="singleSelectUpload"></single-select-upload-filter>
     <multi-select-filter filter="filter" ng-switch-when="multiSelect"></multi-select-filter>
     <single-select-boolean-filter filter="filter" ng-switch-when="singleSelectBoolean"></single-select-boolean-filter>
+    <single-select-filter filter="filter" ng-switch-when="singleSelect"></single-select-filter>
 </div>
