--- a/public/enrichment/mart-visual-enrichment/app/partials/enrichment.html
+++ b/public/enrichment/mart-visual-enrichment/app/partials/enrichment.html
@@ -25,7 +25,7 @@
                         <tab-heading>
                             <h3>List of Genes</h3>
                         </tab-heading>
-                        <div mv-filter="{{enr.getFilter('sets')}}">
+                        <div collapse="enr.setsIsCollapsed" mv-filter="{{enr.getFilter('sets')}}">
                         </div>
                     </tab>
                     <tab>
@@ -49,11 +49,15 @@
         <!-- background -->
         <div class="row">
             <div class="col-md-8">
-                <h2>Background is optional</h2>
+                <hr/>
                 <tabset type="pills" justified="true">
                     <tab>
-                        <tab-heading><h3>Background</h3></tab-heading>
-                        <div mv-filter="{{enr.getFilter('background')}}">
+                        <tab-heading>
+                            <h3 ng-click="enr.backgroundIsCollapsed = !enr.backgroundIsCollapsed">
+                                Background
+                            </h3>
+                        </tab-heading>
+                        <div collapse="enr.backgroundIsCollapsed" mv-filter="{{enr.getFilter('background')}}">
                          </div>
                     </tab>
                 </tabset>
@@ -63,18 +67,18 @@
         <!-- cutoff and the rest -->
         <div class="row">
             <div class="col-md-8">
-                <h2>Output filtering</h2>
+                <hr/>
                 <tabset type="pills" justified="true">
                     <tab>
-                        <tab-heading><h3>Cutoff</h3></tab-heading>
-                        <div mv-filter="{{enr.getFilter('cutoff')}}">
-                         </div>
-                         <div mv-filter="{{enr.getFilter('gene_type')}}">
-                         </div>
-                         <div mv-filter="{{enr.getFilter('gene_limit')}}">
-                         </div>
-                         <div mv-filter="{{enr.getFilter('homolog')}}">
-                         </div>
+                        <tab-heading>
+                            <h3 ng-click="enr.cutoffIsCollapsed = !enr.cutoffIsCollapsed">Cutoff</h3>
+                        </tab-heading>
+                        <div collapse="enr.cutoffIsCollapsed">
+                            <div mv-filter="{{enr.getFilter('cutoff')}}"></div>
+                            <div mv-filter="{{enr.getFilter('gene_type')}}"></div>
+                            <div mv-filter="{{enr.getFilter('gene_limit')}}"></div>
+                            <div mv-filter="{{enr.getFilter('homolog')}}"></div>
+                        </div>
                     </tab>
                 </tabset>
             </div>
@@ -83,12 +87,16 @@
         <!-- annotations -->
         <div class="row">
             <div class="col-md-8">
-                <h2>List of Annotations</h2>
+                <hr/>
                 <tabset type="pills" justified="true">
                     <tab>
-                        <tab-heading><h3>Annotations</h3></tab-heading>
-                        <div ng-class="mve-annotations" ng-repeat="a in enr.getAttributes('annotation')"
-                             mv-attribute="a">
+                        <tab-heading>
+                            <h3 ng-click="enr.annotationIsCollapsed = !enr.annotationIsCollapsed">Annotations</h3>
+                        </tab-heading>
+                        <div collapse="enr.annotationIsCollapsed">
+                            <div ng-class="mve-annotations"
+                                 ng-repeat="a in enr.getAttributes('annotation')"
+                                 mv-attribute="a"></div>
                         </div>
                     </tab>
                 </tabset>
