--- a/public/enrichment/mart-visual-enrichment/app/partials/boolean-filter.html
+++ b/public/enrichment/mart-visual-enrichment/app/partials/boolean-filter.html
@@ -1,6 +1,6 @@
 <div>
     <h3>{{filter.displayName}}</h3>
-    <p>{{filter.description}}</p>
+    <!--<p>{{filter.description}}</p>-->
     <input type="radio" ng-model="choice" ng-click="set('only')"> Yes
     <input type="radio" ng-model="choice" ng-click="set('excluded')"> No
 </div>
