--- a/public/enrichment/mart-visual-enrichment/app/partials/filter.html
+++ b/public/enrichment/mart-visual-enrichment/app/partials/filter.html
@@ -1,4 +1,4 @@
-<div ng-switch on="filter.type">
+<div ng-switch on="filter.type" class="mve-filter">
     <boolean-filter filter="filter" ng-switch-when="boolean"></boolean-filter>
     <text-filter filter="filter" ng-switch-when="text"></text-filter>
     <upload-filter filter="filter" ng-switch-when="upload"></upload-filter>
