--- a/public/enrichment/mart-visual-enrichment/app/partials/upload-filter.html
+++ b/public/enrichment/mart-visual-enrichment/app/partials/upload-filter.html
@@ -1,7 +1,7 @@
 <div>
     <div>
         <h3>{{filter.displayName}}</h3>
-        <p>{{filter.description}}</p>
+        <!-- <p>{{filter.description}}</p> -->
     </div>
     <textarea class="form-control mv-tarea"
               rows="8" cols="60" ng-model="textareaValue"
