--- a/public/enrichment/mart-visual-enrichment/app/css/app.css
+++ b/public/enrichment/mart-visual-enrichment/app/css/app.css
@@ -1,3 +1,10 @@
+body {
+    margin: 0.2em auto 12em auto;
+}
+
+h1, h2, h3, h4 {
+    color: #E94E77;
+}
 
 .left-panel {
     border-right: 1px solid #FEDED9;
@@ -15,25 +22,48 @@ input[type=text] {
     margin-top: 10px;
 }
 
-.mv-vis-container {}
-
-.mv-table-container {
-    overflow-y: auto;
-    /*height: 40%;*/
+.modal-dialog {
+    width: 80%;
 }
 
-.mve-select {
-    margin: 20px auto 20px auto;
+.collapse-symbol {
+    float: left;
+    color: #556270;
+    opacity: 0.8;
+    font-size: 2.6em;
+
 }
 
-.mve-species h2 {
-    color: #E94E77;
+.nav, .pagination, .carousel, .panel-title a { cursor: pointer; }
+
+
+.enrichment {
+    margin: 5em auto 3em auto;
 }
 
 .enrichment h1, .enrichment h2 {
     text-align: center;
     margin: 100px auto 45px auto;
 }
+
+.mv-table-container {
+    overflow-y: auto;
+    /*height: 40%;*/
+}
+
+.mve-title {
+    font-size: 3.7em;
+    margin-bottom: 3em;
+}
+
+.mve-select {
+    margin: 20px auto 20px auto;
+}
+
+.mve-filter h3 {
+    color: #4599BC;
+}
+
 
 .mve-annotations {
     padding: 2em 1em;
@@ -42,16 +72,10 @@ input[type=text] {
     margin: 0.8em 0.5em 0.8em 1.2em;
 }
 
-body {
-    margin: 8em auto 12em auto;
-}
 
-
-.modal-dialog {
-    width: 80%;
-}
-
-.nav, .pagination, .carousel, .panel-title a { cursor: pointer; }
+/*.active h1, .active h2, .active h3, .active h4 {
+    color: #4599BC;
+}*/
 
 
 @media (min-width: 1024px) {
