--- a/public/enrichment/mart-visual-enrichment/app/partials/single-select-filter.html
+++ b/public/enrichment/mart-visual-enrichment/app/partials/single-select-filter.html
@@ -1,7 +1,8 @@
 <div>
     <div>
         <h3>{{filter.displayName}}</h3>
-        <p>{{filter.description}}</p>
+        <!-- <p>{{filter.description}}</p> -->
     </div>
-    <select class="form-control mve-select" ng-model="selected" ng-options="f.displayName for f in options" ng-change="onSelect(selected)"></select>
+    <select class="form-control mve-select" ng-model="selected" ng-options="f.displayName for f in options" ng-change="onSelect(selected)">
+    </select>
 </div>
